docs/_static/styles/extra.css
/* ... */
:root > [data-md-color-scheme="default"] .tabbed-set {
  --md-code-bg-color: #f3f3f3;
}
:root > [data-md-color-scheme="default"] .tabbed-set .admonition code {
  --md-code-bg-color: #e3e3e3;
}
[data-md-color-scheme="default"] .md-typeset hr {
  border-bottom: .05rem solid #ddd;
}

/* [Zensical] Various color scheme fixes (dark mode). */
:root > [data-md-color-scheme="slate"] {
  --md-accent-fg-color: #8acba7;
  --md-accent-fg-color--transparent: #57957333;
  --md-primary-fg-color: #9fb9ff;
  --md-code-bg-color: #1b1b1b;
  --md-code-fg-color: #bbb;
}
[data-md-color-scheme="slate"] .md-sidebar.md-sidebar--secondary .md-nav__item .md-nav__link--active {
  color: white;
}
[data-md-color-scheme="slate"] .md-sidebar.md-sidebar--secondary .md-nav__item .md-nav__link:hover {
  color: white;
}
[data-md-color-scheme="slate"] .md-sidebar.md-sidebar--secondary .md-nav__item .md-nav__link:hover {
  color: white;
}
[data-md-color-scheme="slate"] .md-content .md-path .md-path__link:hover {
  color: white;
}
[data-md-color-scheme="slate"] .md-main .md-content a:not(.md-content__button):not([href^="#__tabbed"]):not(.md-path__link):hover {
  color: #d3e7ff;
}
[data-md-color-scheme="slate"] .md-main .md-content a:not(.md-content__button):not([href^="#__tabbed"]):not(.md-path__link):hover code {
  color: #d3e7ff;
  background-color: #313942;
}
[data-md-color-scheme="slate"] .md-main .md-content a.headerlink {
  color: inherit;
}
[data-md-color-scheme="slate"] .md-footer a:hover {
  color: #ddd;
}
[data-md-color-scheme="slate"] div.tabbed-set .tabbed-labels {
  background-color: #222;
}
[data-md-color-scheme="slate"] div.tabbed-set .tabbed-content {
  background-color: #1b1b1b;
}
/* Somehow the tabbed color is the accent color sometimes. */
:root > [data-md-color-scheme="slate"] div.tabbed-set * {
  --md-default-fg-color: #ddd !important;
}
/* Render download links and subtle links differently from page links. */
[data-md-color-scheme="slate"] a[href^="https://github.com/ungive/discord-music-presence/releases/download"],
[data-md-color-scheme="slate"] a.subtle-link {
  color: #ddd;
}
[data-md-color-scheme="slate"] a[href^="https://github.com/ungive/discord-music-presence/releases/download"]:hover,
[data-md-color-scheme="slate"] a.subtle-link:hover {
  color: #fff !important;
}
:root > [data-md-color-scheme="slate"] .tabbed-set {
  --md-code-bg-color: #2c2c2c;
}
:root > [data-md-color-scheme="slate"] .tabbed-set .admonition code {
  --md-code-bg-color: #1f1f1f;
}

/* Custom logo with light and dark variants. */
/* https://github.com/squidfunk/mkdocs-material/discussions/2729 */
[data-md-color-scheme="slate"] #logo {
  content: url("../images/logo-dark.png");
}
[data-md-color-scheme="default"] #logo {
  content: url("../images/logo-light.png");
}

/* [Zensical] Fix alignment of the GitHub repository card. */
[data-md-component="header"] > .md-grid {
  padding-right: 1.5rem;
}

/* [Zensical] Give text in the navigation sidebar a little more space so it does not wrap. */
@media screen and (min-width: 76.2344em) {
  [data-md-component="sidebar"][data-md-type="navigation"] {
    width: 12.5rem;
  }
  @supports selector(::-webkit-scrollbar) {
    [dir=ltr] .md-sidebar__inner {
      padding-right: calc(100% - 12.5rem);
    }
  }
}
[data-md-component="sidebar"][data-md-type="toc"] {
  width: 13rem;
  /* margin-right: -1rem; */
}

/* [Zensical] Move the logo a little to the left. */
[data-md-component="logo"] {
  translate: -0.15rem 0;
}

/* @media screen and (min-width: 76.2344em) {
  .md-header__inner {
    padding-left: 1.8em;
  }
} */

.md-header__title {
  margin-left: 0.1em;
}

/* Page CSS. */
.md-footer, .md-copyright {
  font-size: 10pt !important;
}
.md-footer {
  margin-top: 8em;
}
.md-footer-meta {
  padding: .5em;
}
.md-footer-meta__inner {
  padding-top: 0;
  padding-bottom: .25em;
}
.footer-links-container {
  display: flex;
  flex-wrap: wrap;
  gap: 0 .4rem;
}
.footer-links-container a:not(:first-of-type) {
  margin-left: 0;
}
.md-footer .md-copyright {
  padding: 0;
}
@media screen and (min-width: 45em) {
  .md-social {
    padding: 0;
    margin: 0;
  }
}
.md-social__link {
  width: 1.65rem;
}
body > .md-container {
  min-height: calc(100vh - .5em - .25em);
}

/* @media screen and (min-width: 1em) {
  html {
    font-size: 150% !important;
  }
} */

.md-typeset pre {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
}

.md-header {
  margin-top: .25em;
}

/* [Zensical] Make tabbed views more distinctive */
div.tabbed-set {
  border-radius: .4rem !important;
}
div.tabbed-set .tabbed-labels {
  border-top-left-radius: .4rem;
  border-top-right-radius: .4rem;
}
div.tabbed-set .tabbed-content {
  padding-left: 1.25em;
  padding-right: 1.25em;
  border-bottom-left-radius: .4rem;
  border-bottom-right-radius: .4rem;
}

/* Allow disabling any animations when auto-selecting tabbed labels. */
.js .md-typeset .tabbed-set.no-animation .tabbed-labels::before {
  transition: none;
}

/* Download button styling. */
#app-download-buttons {
  margin-bottom: -.75em;
}
.download-button-container {
  display: inline-flex;
  color: inherit !important;
  text-decoration: none !important;
  line-height: normal;
  margin-right: .5em;
  margin-bottom: .75em;
}
.download-button-container:hover,
.download-button-container:visited,
.download-button-container:active {
  color: inherit;
  text-decoration: none;
}
.download-button {
  display: inline-flex;
  align-items: center;
  width: 13em;
  box-sizing: border-box;
  padding: 0.6em 1em;
  border-radius: 6pt;
  gap: .75rem;
}
.download-button .text {
  display: flex;
  flex-direction: column;
  min-width: 0;
}
.download-button .title,
.download-button .subtitle {
  white-space: nowrap;
  line-height: 1.2;
}
.download-button .title {
  font-weight: 750;
  font-size: 14.5pt;
}
.download-button .subtitle {
  font-weight: 500;
  font-size: 11.5pt;
}
.download-button .subtitle .small {
  font-size: 9pt;
}
/* ... */

